# CPP-real-time-raycasting_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  instructions.md
maps/: map.cub  map2.cub  map3.cub  map4.cub  map5.cub
src/: main.cpp
src/engine/: Engine.h  GameLoop.cpp  GameLoop.h
src/input/: Input.h
src/player/: Player.h
src/raycasting/: Raycaster.cpp  Raycaster.h
src/render/: Renderer.h  SimpleRenderer.cpp  SimpleRenderer.h
src/utils/: Logger.h  Time.cpp  Time.h
src/world/: Map.h  MapLoader.cpp  MapLoader.h
tests/: CMakeLists.txt  test_maploader.cpp
